--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,6 @@
+* {
+  margin: 0;
+}
 body { 
     font-family: 'Roboto', sans-serif; 
   }
@@ -7,7 +10,7 @@ body {
     stroke-dasharray: 1200;
     stroke-dashoffset: 1200;
     animation: heartbeatDraw 4s linear infinite;
-    filter: drop-shadow(0 0 4px #22c55e); /* Glow effect */
+    filter: drop-shadow(0 0 4px #16a94c); /* Glow effect */
 }
 
   @keyframes heartbeatDraw {
