--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,3 +67,10 @@ body {
   .curve-footer {
     clip-path: ellipse(160% 100% at 50% 100%);
   }
+
+    .modal {
+      display: none;
+    }
+    .modal.active {
+      display: flex;
+    }
