--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,9 @@ body {
     clip-path: ellipse(160% 100% at 50% 100%);
   }
 
+body.modal-open {
+  overflow: hidden;
+}
     .modal {
       display: none;
     }
