--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,12 @@
 * {
   margin: 0;
 }
+
+html {
+  scroll-behavior: smooth;
+}
 body { 
-    font-family: 'Roboto', sans-serif; 
+    font-family: 'Roboto', sans-serif;
   }
 
 /* Heartbeat Animation */
